additional work on hidden scripts - use regexp instead of strings comparison for config.hidden - step out when break hits hidden script

--- a/config.json
+++ b/config.json
@@ -1,16 +1,3 @@
 {
-  "hidden": [
-    "buffer.js",
-    "dns.js",
-    "events.js",
-    "freelist.js",
-    "fs.js",
-    "http.js",
-    "net.js",
-    "node.js",
-    "path.js",
-    "stream.js",
-    "timers.js",
-    "util.js"
-  ]
+  "hidden": []
 }
