--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
     "name": "node-inspector",
-    "version": "0.1.6",
+    "version": "0.1.7",
     "description": "Web Inspector based nodeJS debugger",
     "homepage": "http://github.com/dannycoates/node-inspector",
     "author": "Danny Coates <dannycoates@gmail.com>",
-    "keywords": ["debugger", "inspector"],
+    "keywords": ["debug", "debugger", "inspector", "profiler"],
+    "repository": {
+      "type": "git",
+      "url": "http://github.com/dannycoates/node-inspector.git"
+    },
     "engines" : { "node": ">=0.3.0" },
-    "bin" : { "node-inspector" : "./bin/inspector.js" }
+    "bin" : { "node-inspector" : "./bin/inspector.js" },
+    "dependencies": {
+      "websocket-server": "~1.4",
+      "paperboy": "~0.0.2"
+    }
 }
