Restore breakpoints on debugee restart.
When the debugged application is restarted, node-inspector restores all
breakpoints from the debugging session.

--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "dependencies": {
       "socket.io": "~0.8.2",
       "paperboy": "~0.0.2"
+    },
+    "devDependencies": {
+      "mocha": "latest",
+      "chai": "latest"
+    },
+    "scripts": {
+      "test": "mocha"
     }
 }
