--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-inspector",
-  "version": "0.1.10",
+  "version": "0.3.0preview1",
+  "publishConfig": { "tag": "preview" },
   "description": "Web Inspector based nodeJS debugger",
   "homepage": "http://github.com/dannycoates/node-inspector",
   "author": "Danny Coates <dannycoates@gmail.com>",
