Replaced paperboy with express.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "socket.io": "~0.9.14",
-    "paperboy": "~0.0.5",
+    "express": "~3.2.6",
     "async": "~0.2.8"
   },
   "devDependencies": {
