New configuration system based on RC module
Fix for issue #177
[RC module](https://npmjs.org/package/rc)

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "socket.io": "~0.9.14",
     "express": "~3.3",
     "async": "~0.2.8",
-    "glob": "~3.2.1"
+    "glob": "~3.2.1",
+    "rc": "~0.3.0"
   },
   "devDependencies": {
     "mocha": "latest",
