NetworkAgent: support data scheme URLs
Implemented support for data scheme URLs. This allows sourcemap files to be
embedded in the sourceMappingURL in the generated js file.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express": "~3.4",
     "async": "~0.2.8",
     "glob": "~3.2.1",
-    "rc": "~0.3.0"
+    "rc": "~0.3.0",
+    "strong-data-uri": "~0.1.0"
   },
   "devDependencies": {
     "mocha": "latest",
