Tighten findAllApplicationScripts heuristics
When the directory does not contain package.json, limit the traversal
to top level javascript files and well-known subdirectories:
    lib/
    node_modules/
    test/

This should prevent unintentionaly broad searches like
all files in C:\ drive.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "devDependencies": {
     "mocha": "latest",
-    "chai": "latest"
+    "chai": "latest",
+    "fs-extra": "~0.8.1"
   },
   "preferGlobal": true,
   "scripts": {
