--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "yargs": "^1.2.1",
     "which": "^1.0.5",
     "v8-debug": "~0.1.0",
+    "v8-profiler": "~5.1.0",
     "semver": "^3.0.1"
   },
   "devDependencies": {
