Injector API restructuring
Injector API:
- Removed socket connection
- Added dynamic API for injections (injection is allowed in all time
after Injector was injected)
- Debugger protocol is extensible now!

Added v8-debug dependence
(Small binary API what allow to extend debugger protocol)

Private DebuggerClient._registerDebuggerEventHandlers redefined as
public.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "ws": "~0.4.31",
     "opener": "~1.3.0",
     "yargs": "~1.2.1",
-    "which": "~1.0.5"
+    "which": "~1.0.5",
+    "v8-debug": "~0.1.0"
   },
   "devDependencies": {
     "mocha": "latest",
