--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "node-debug": "./bin/node-debug.js"
   },
   "dependencies": {
-    "express": "~4.0",
-    "async": "~0.8",
-    "glob": "~3.2.1",
-    "rc": "~0.3.0",
+    "express": "^4.0",
+    "async": "~0.9",
+    "glob": "^3.2.1",
+    "rc": "~0.5.0",
     "strong-data-uri": "~0.1.0",
-    "debug": "~1.0",
+    "debug": "^1.0",
     "ws": "~0.4.31",
-    "opener": "~1.3.0",
-    "yargs": "~1.2.1",
-    "which": "~1.0.5",
+    "opener": "^1.3.0",
+    "yargs": "^1.2.1",
+    "which": "^1.0.5",
     "v8-debug": "~0.1.0"
   },
   "devDependencies": {
-    "mocha": "latest",
-    "chai": "latest",
+    "mocha": "^1.21",
+    "chai": "^1.9",
     "jshint": "^2.4.4",
     "fs-extra": "~0.8.1"
   },
