--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "express": "^4.0",
+    "serve-favicon": "^2.1.1",
     "async": "~0.9",
     "glob": "^3.2.1",
     "rc": "~0.5.0",
