--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "opener": "^1.3.0",
     "yargs": "^1.2.1",
     "which": "^1.0.5",
-    "v8-debug": "~0.1.0"
+    "v8-debug": "~0.1.0",
+    "semver": "^3.0.1"
   },
   "devDependencies": {
     "mocha": "^1.21",
