Update tools/generate-commands algorithm
Automatically inject extentions to new front-end.

New front-end has full modular system, we create NodeInspectorOverrides.js
and define it as `node` module.
When front-end will try to receive `node` module, his request web-host/node.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "preferGlobal": true,
   "scripts": {
     "pretest": "jshint .",
-    "test": "mocha"
+    "test": "mocha",
+    "generate-front-end": "node --harmony tools/generate-front-end"
   }
 }
