Make sure to open URL in a webkit browser
`opener` always opens the URL in the default browser of the user.
It might be annoying for a user whose default browser is Firefox
to have Node Inspector start in Firefox.

This PR makes sure that the Node Inspector URL is opened
either in Chrome, Chromium or Opera (if one of them is the default
browsers, it gets priority). If we can't do that for some reason
(e.g. user has none of them installed), we just display an error
message in the console but do not open the URL in any browser.

Close #346
Close #528

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "strong-data-uri": "~0.1.0",
     "debug": "^1.0",
     "ws": "~0.4.31",
-    "opener": "^1.3.0",
+    "biased-opener": "~0.2.2",
     "yargs": "^1.2.1",
     "which": "^1.0.5",
     "v8-debug": "~0.3.0",
