--- a/package.json
+++ b/package.json
@@ -22,20 +22,20 @@
     "node-debug": "./bin/node-debug.js"
   },
   "dependencies": {
-    "express": "^4.8.0",
-    "serve-favicon": "^2.1.1",
     "async": "~0.9",
-    "glob": "^5.0.5",
-    "rc": "~0.5.0",
-    "strong-data-uri": "~0.1.0",
-    "debug": "^1.0",
-    "ws": "~0.4.31",
     "biased-opener": "~0.2.2",
-    "yargs": "^1.2.1",
-    "which": "^1.0.5",
+    "debug": "^2.2.0",
+    "express": "^4.12.3",
+    "glob": "^5.0.5",
+    "rc": "^1.0.1",
+    "semver": "^4.3.4",
+    "serve-favicon": "^2.1.1",
+    "strong-data-uri": "^1.0.0",
     "v8-debug": "~0.4.2",
     "v8-profiler": "~5.2.4",
-    "semver": "^3.0.1"
+    "which": "^1.1.1",
+    "ws": "^0.7.1",
+    "yargs": "^3.9.0"
   },
   "devDependencies": {
     "mocha": "^1.21",
