Network: added new tests

--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "yargs": "^3.9.0"
   },
   "devDependencies": {
+    "promise": "^7.0.3",
     "mocha": "^1.21",
-    "chai": "^1.9",
+    "chai": "^2.1",
     "jshint": "^2.4.4",
     "fs-extra": "~0.8.1"
   },
