--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
 sudo: false
 language: node_js
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - gcc-4.9
+      - g++-4.9
+
+before_install:
+  - export CC=/usr/bin/gcc-4.9;
+  - export CXX=/usr/bin/g++-4.9;
+
 node_js:
-  - "0.10"
-  - "0.12"
   - "4"
   - "5"
