--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "biased-opener": "~0.2.2",
     "bluebird": "^3.1.1",
     "co": "^4.6.0",
+    "commander": "^2.9.0",
     "debug": "^2.2.0",
     "express": "^4.12.3",
     "glob": "^5.0.5",
