--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "node-inspector",
   "version": "0.7.5",
+  "publishConfig": {
+    "tag": "pure"
+  },
   "description": "Web Inspector based nodeJS debugger",
   "homepage": "http://github.com/node-inspector/node-inspector",
   "author": "Danny Coates <dannycoates@gmail.com>",
